Tests/Conformance/Generated/Builtin/Constant/Integer/Integer_09.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Integer.Integer_09

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_integer_integer_09 "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/integer/integer-09/integer-09.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Integer.Integer_09
